outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval2998465662415279139_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of reaching the destination and exploring less central nodes, using a fixed exploration bonus and a destination weight that grows with the number of unvisited nodes.}
                                                                                                                                                                                    ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of reaching the destination and exploring less central nodes, using a fixed exploration bonus and a destination weight that grows with the number of unvisited nodes.}
                                                                                                                                                                                    ^
SyntaxError: unmatched '}'
